--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </p>
   <p>
   </p>
-<h5>Website made by Gio</h5>
+<h5>Website made by Gio and Ryan R.</h5>
 <h5>
-  Employees: Nolan Zurek, Rohen Phearse, and Giovanny Ramos</h5>
+  Employees: Nolan Zurek, Rohen Phearse, Ryan Rios and Giovanny Ramos</h5>
