--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="style.css">
 <h1>Nolan's Store</h1>
 <p>
 </p>
@@ -15,3 +14,12 @@
 <h5>Website made by Gio and Ryan R.</h5>
 <h5>
   Employees: Nolan Zurek, Rohen Phearse, Ryan Rios and Giovanny Ramos</h5>
+  <label>Where Would You Like To Go?</label>
+  <select>
+    <option><a href = "test1.html">
+      Select
+      </option></a>
+      <option>
+      Select
+    </option>
+  </select>
