--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<link rel="stylesheet" href="style.css">
-href="style.css"
 <h1>Nolan's Store</h1>
 <p>
 </p>
@@ -18,10 +16,10 @@ href="style.css"
   Employees: Nolan Zurek, Rohen Phearse, Ryan Rios and Giovanny Ramos</h5>
   <label>Where Would You Like To Go?</label>
   <select>
-    <option><a href = "test1.html">
+    <option>
       Select
-      </option></a>
+      </option>
       <option>
-      Select
+        <a href = "test1.html">Test</a>
     </option>
   </select>
