--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h2><i>Shiny Shoes</i></h2>
 <h4><a href="https://bit.ly/ShinyShoe">Form for an Appointment</a>
 <h5>A Tiny Business Made by Nolan</h5>
-<h2><span><i>Air Balloons</i></span></h2>
+<h2><span><i>Ballon-amles</i></span></h2>
   <h4><a href="https://bit.ly/AirAnimal"><u>Form for a Balloon</u></a></h2>
   <h5>Another Tiny Business Made by Nolan</h5>
   <p>
@@ -15,12 +15,3 @@
 <h5>Website made by Gio and Ryan R.</h5>
 <h5>
   Employees: Nolan Zurek, Rohen Phearse, Ryan Rios and Giovanny Ramos</h5>
-  <label>Where Would You Like To Go?</label>
-  <select>
-    <option>
-      Select
-      </option>
-      <option>
-        <a href = "test1.html">Test</a>
-    </option>
-  </select>
